--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Ngdaniel.GitHub.io</h1>
+        <h1>Daniel Ng</h1>
+        <h2>danielng@washington.edu</h2>
+        <h2>408.455.0251</h2>
         <p></p>
 
 
