--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p></p>
 
 
-        <p class="view"><a href="https://github.com/ngdaniel">View My GitHub Profile</a></p>
+        <p class="view"><a href="ngdaniel.me/resume.pdf">resume</a></p>
 
       </header>
       <section>
@@ -51,7 +51,6 @@
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
