picture, css, gitignore

--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
   <body>
     <div class="wrapper">
       <header>
+        <img class="img-circle" src="me.jpg">
+        <br>
+        <br>
+        <br>
         <h1>daniel ng</h1>
         <h2>danielng@washington.edu</h2>
         <h2>408.455.0251</h2>
         <p></p>
 
 
-        <p class="view"><a href="resume.pdf">resume</a></p>
+        <h2 class="view"><a href="resume.pdf">resume</a></h2>
 
       </header>
       <section>
