--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <br>
         <br>
         <h1>daniel ng</h1>
-        <h2>danielng@washington.edu</h2>
+        <h2><a href="mailto:danielng@washington.edu">danielng@washington.edu</a></h2>
         <h2>408.455.0251</h2>
         <p></p>
 
@@ -28,8 +28,7 @@
 
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lorem Ipsum</h3>
+        <h3>A Happy Mistake</h3>
 
 <p>Nice little fluffy clouds laying around in the sky being lazy. With something so strong, a little bit can go a long way. Just think about these things in your mind and drop em' on canvas. Get away from those little Christmas tree things we used to make in school. You are only limited by your imagination.</p>
 
