--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <p></p>
 
 
-        <h2 class="view"><a href="resume.pdf">resume</a></h2>
+        <h2><a href="resume.pdf">resume</a></h2>
+        <h2><a href="https://github.com/ngdaniel/">github</a></h2>
 
       </header>
       <section>
