--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <br>
         <br>
         <h1>daniel ng</h1>
-        <h2><a href="mailto:danielng@washington.edu">danielng@washington.edu</a></h2>
+        <h2><a href="mailto:me@daniel.ng">me@daniel.ng</a></h2>
         <h2>408.455.0251</h2>
         <p></p>
 
